Implement dashboard with a stub backend

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,2 @@
- 
- <app-navbar></app-navbar>
- <div class="container">
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Symbol</th>
-        <th>Last Price</th>
-        <th>Change</th>
-        <th>% Change</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>MSFT</td>
-        <td>250.00 $</td>
-        <td class="text-danger">-0,308</td>
-        <td class="text-danger">-1.08%</td>
-        <td>
-          <a class="btn btn-success">BUY</a>
-          <a class="btn btn-danger">SELL</a>
-        </td>
-      </tr>
-      <tr>
-        <td>APPL</td>
-        <td>270.00 $</td>
-        <td class="text-success">+0,708</td>
-        <td class="text-success">+2.08%</td>
-        <td>
-            <a class="btn btn-success">BUY</a>
-            <a class="btn btn-danger">SELL</a>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<app-navbar></app-navbar>
+<app-dashboard></app-dashboard>
