--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<div class="navbar navbar-default">
+<div class="navbar navbar-default" *ngIf="!isIntro()">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand">Stocks</a>
+      <a class="navbar-brand" [routerLink]="['/introduction']">Stocks</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
