--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,10 +6,10 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a>Dashboard</a>
+          <a class="navbar-nav" [routerLink]="['/dashboard']">Dashboard</a>
         </li>
         <li>
-          <a>Transaction History</a>
+          <a class="navbar-nav">Transaction History</a>
         </li>
       </ul>
       <div class="navbar-header navbar-right">
