Implement Transactions History

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,7 @@
           <a class="navbar-nav" [routerLink]="['/dashboard']">Dashboard</a>
         </li>
         <li>
-          <a class="navbar-nav">Transaction History</a>
+          <a class="navbar-nav" [routerLink]="['/transactions']">Transactions</a>
         </li>
       </ul>
       <div class="navbar-header navbar-right">
